fixed overflow bug in windows

--- a/public_http/csscore/owns/main.css
+++ b/public_http/csscore/owns/main.css
@@ -254,6 +254,8 @@ html, body {
 	flex-wrap: nowrap;
 
 	z-index: 1 !important;
+	max-width: 100% !important;
+	max-height: 100% !important;
 	width: 100%;
 	height: 100%;
 }
@@ -292,6 +294,18 @@ html, body {
 
 .gui-widget-application-button {
 	min-width: 25%;
+}
+
+.gui-widget-main-container {
+	max-width: 100% !important;
+	max-height: 100% !important;
+	margin: 0 !important;
+	overflow: auto !important;
+}
+
+.gui-widget-shell-window-area {
+	max-height: calc(100% - 45px) !important;
+	max-width: 100% !important;
 }
 
 @media all and (max-width: 470px) {
